Fix to stop skill title overlaping with skill level

--- a/assets/less/base.less
+++ b/assets/less/base.less
@@ -359,7 +359,7 @@ a.dotted-link {
             font-size: 16px;
             position: relative;
             margin-top: 0;
-            margin-bottom: 10;
+            margin-bottom: 18px;
             .level-label {
                 color: lighten(@color, 30%);
                 font-size: 14px;
@@ -367,7 +367,7 @@ a.dotted-link {
                 font-family: "Lato", arial, sans-serif;
                 position: absolute;
                 right: 0;
-                top: 0;
+                top: 17px;
             }
 
         }
